2007-07-20  Akim Demaille  <demaille@gostai.com>

	Activate function calls
	* src/parser/bison/ugrammar.y: Generalize the function call syntax.
	Delete lists that have been spliced.
	(new_exp): Return type is CallExp.
	(name): Type is CallExp.

2007-07-20  Akim Demaille  <demaille@gostai.com>

	Remove debug scafolding
	Thanks to Ted and Julian (Valgrind).
	* src/parser/bison/ugrammar.y: Activate dtors.
	* src/runner/runner.cc: Remove debug traces.
	* src/uconnection.cc (UConnection::execute): Deactivate delete.

2007-07-20  Guillaume Deslandes  <deslandes@gostai.com>

	Remove extra delete in uconnection.cc (execute)
	* src/uconnection.cc: here.

2007-07-20  Akim Demaille  <demaille@gostai.com>

	Warning: does not work!
	* src/object/atom.hxx (ast/pretty-printer.hh): Include.
	* src/parser/bison/ugrammar.y: Deactivate dtors.
	* src/runner/runner.cc: Add debug scafolding.
	* src/uconnection.cc, src/uexpression.cc: Do not free the Ast.

2007-07-20  Akim Demaille  <demaille@gostai.com>

	Prettify 
	* src/ast/ast.yml (CallExp::printer): Don't display useless parens.
	* src/object/Makefile.am: Don't compile atom.cc, it's empty.
	* src/runner/runner.cc (CallExp): Initial attempt to call a Code.

2007-07-20  Akim Demaille  <demaille@gostai.com>

	Support function (but not yet calls)
	* src/ast/all.hh (function.hh): Include.
	* src/ast/ast.yml (AssignExp::printer): New.
	(FunctionDec): Rename as...
	(Function): this.
	Derive from Exp, not Dec: it does not have a name.
	Remove the "result" attribute, we are not typed.
	Add printer description.

	* src/object/fwd.hh: Tidy.
	(APPLY_ON_ALL_PRIMITIVES_BUT_OBJECT): Add code/Code.
	* src/object/atom.cc: Empty.
	* src/object/atom.hh, src/object/atom.hxx (code_traits): New.
	Use APPLY_ON_ALL_PRIMITIVES_BUT_OBJECT.
	(special_slots_dump): Use libport::deref since code is actually
	a pointer.
	* src/object/primitives.hh, src/object/primitives.cc
	(code_class, code_class_initialize): New.